Version 15.1 (2018-10-28)
-------------------------
- Allow removing separators in Settings app [https://github.com/clechasseur/pathcopycopy/issues/24]
- Do not copy path unless Ctrl key is down when corresponding option is used [https://github.com/clechasseur/pathcopycopy/issues/32]
- Report version in Windows' Programs and Features [https://github.com/clechasseur/pathcopycopy/issues/28]
- Report errors when exporting settings [https://github.com/clechasseur/pathcopycopy/issues/43]


Version 15.0 (2017-12-21)
-------------------------
- Ignored software updates really won't show up again after one week [https://github.com/clechasseur/pathcopycopy/issues/20]
- Escape '+' character when using the Internet path command [https://github.com/clechasseur/pathcopycopy/issues/11]
- Custom commands can now launch an executable with the path(s) as argument [https://github.com/clechasseur/pathcopycopy/issues/4]
- It is now possible to use a command automatically when Ctrl is held down when contextual menu is shown [https://github.com/clechasseur/pathcopycopy/issues/6]


Version 14.0.1 (2017-09-23)
---------------------------
- Restore compatibility with Windows XP [https://github.com/clechasseur/pathcopycopy/issues/17]


Version 14.0 (2017-07-14)
-------------------------
- New UI to select which command are included in main menu/submenu, a little like it was in 12.0.
- Settings window now remembers its size and position. It can also be resized. [https://pathcopycopy.codeplex.com/workitem/11423]
- Project moved to GitHub because of planned CodePlex shutdown.


Version 13.0.1 (2016-10-12)
---------------------------
- Copying short/long name now works properly on drives and copies the drive label (e.g., C:). [https://pathcopycopy.codeplex.com/workitem/11413]
- Clicking on the Icon column header in the Settings application will no longer cause a crash. [https://pathcopycopy.codeplex.com/workitem/11412]