@@ -48,6 +48,8 @@
 #define IDS_ANDROGYNOUS_UNC_PATH_PLUGIN_DESCRIPTION 142
 #define IDS_ANDROGYNOUS_FOLDER_PLUGIN_DESCRIPTION 143
 #define IDS_ANDROGYNOUS_UNC_FOLDER_PLUGIN_DESCRIPTION 144
+#define IDS_WSL_PATH_PLUGIN_DESCRIPTION 145
+#define IDS_WSL_PATH_PLUGIN_HINT        146
 #define IDR_PATHCOPYCOPYCONTEXTMENUEXT  201
 #define IDR_PATHCOPYCOPYDATAHANDLER     202
 #define IDR_PATHCOPYCOPYCONFIGHELPER    203
